Closed
Bug 1332798
Opened 8 years ago
Closed 8 years ago
Crash in <name omitted> | mozilla::widget::RectTextureImage::BeginUpdate
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
mozilla54
People
(Reporter: MatsPalmgren_bugz, Assigned: mtseng)
Details
(Keywords: crash)
Crash Data
Attachments
(1 file)
|
59 bytes,
text/x-review-board-request
|
mstange
:
review+
gchang
:
approval-mozilla-aurora+
jcristau
:
approval-mozilla-beta+
|
Details |
This bug was filed from the Socorro interface and is
report bp-0b3cb402-547b-40cc-8a02-63ebc2170120.
=============================================================
Looks like a null-pointer crash in RectTextureImage::BeginUpdate:
https://hg.mozilla.org/releases/mozilla-release/annotate/8612c3320053/widget/cocoa/RectTextureImage.mm#l56
The MacIOSurface::CreateIOSurface may return nullptr.
| Reporter | ||
Updated•8 years ago
|
Flags: needinfo?(mtseng)
| Comment hidden (mozreview-request) |
| Assignee | ||
Comment 2•8 years ago
|
||
Yes, submitted a patch to fix this.
Assignee: nobody → mtseng
Flags: needinfo?(mtseng)
Comment 3•8 years ago
|
||
| mozreview-review | ||
Comment on attachment 8829348 [details]
Bug 1332798 - Add null check after CreateIOSurface.
https://reviewboard.mozilla.org/r/106466/#review108250
Attachment #8829348 -
Flags: review?(mstange) → review+
| Assignee | ||
Comment 4•8 years ago
|
||
Pushed by mtseng@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/6b8e2061312f
Add null check after CreateIOSurface. r=mstange
Comment 6•8 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 8 years ago
status-firefox54:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla54
Comment 7•8 years ago
|
||
AFAICT, this crash goes back a ways. Please request Aurora/Beta approval on this patch when you get a chance.
status-firefox51:
--- → wontfix
status-firefox52:
--- → affected
status-firefox53:
--- → affected
Flags: needinfo?(mtseng)
| Assignee | ||
Comment 8•8 years ago
|
||
Comment on attachment 8829348 [details]
Bug 1332798 - Add null check after CreateIOSurface.
Approval Request Comment
[Feature/Bug causing the regression]:
[User impact if declined]: Firefox will crash sometimes.
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]:
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]: No.
[Why is the change risky/not risky?]: It just added a null check.
[String changes made/needed]: none
Flags: needinfo?(mtseng)
Attachment #8829348 -
Flags: approval-mozilla-beta?
Attachment #8829348 -
Flags: approval-mozilla-aurora?
Comment 9•8 years ago
|
||
Comment on attachment 8829348 [details]
Bug 1332798 - Add null check after CreateIOSurface.
We will take this patch to fix the crash. Aurora53+. And, in the future, please fill the whole uplift request template.
Attachment #8829348 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 10•8 years ago
|
||
| bugherder uplift | ||
Comment 11•8 years ago
|
||
Comment on attachment 8829348 [details]
Bug 1332798 - Add null check after CreateIOSurface.
crash fix for beta52
Attachment #8829348 -
Flags: approval-mozilla-beta? → approval-mozilla-beta+
Comment 12•8 years ago
|
||
| bugherder uplift | ||
You need to log in
before you can comment on or make changes to this bug.
Description
•