Bug 1332798 - Add null check after CreateIOSurface. r=mstange a=jcristau

MozReview-Commit-ID: 6JIR8y04cXm